--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
   <div class="card">
     <h3>Requisições</h3>
-    <button onclick="https://grupodvbr.github.io/Mercatto/'">Requisições Gerais</button>
+<button onclick="location.href='https://grupodvbr.github.io/Mercatto/'">
+  Requisições Gerais
+</button>
   </div>
 
   <div class="card">
