--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div class="cards">
   <div class="card">
     <h3>Contagens</h3>
-    <button onclick="location.href='https://exemplo.com/contagem-utensilios'">Contagem de Utensílios</button>
+    <button onclick="location.href='https://grupodvbr.github.io/utensilios/'">Contagem de Utensílios</button>
     <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
     <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
     <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
