--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="card">
     <h3>Pesquisas</h3>
     <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
-    <button onclick="location.href='https://exemplo.com/feedback'">Deixe sua opinião sobre melhorias para o sistema</button>
+    <button onclick="location.href='https://grupodvbr.github.io/avaliacao/'">Deixe sua opinião sobre melhorias para o sistema</button>
   </div>
 </div>
 
