--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </header>
 
 <div id="banner">
-  ⚡ Aviso Importante: Atualize suas contagens hoje até 18h!
+  ⚡ Aviso Importante:
 </div>
 
 <div class="cards">
