--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <div class="card">
     <h3>Requisições</h3>
-<button onclick="location.href='https://grupodvbr.github.io/Mercatto/'">
+<button onclick="location.href='https://grupodvbr.github.io/requisicoes-mercatto/'">
   Requisições Gerais
 </button>
   </div>
