--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 </div>
 
 <div class="cards">
+
+  <div class="card">
+    <h3>Gerência</h3>
+    <button onclick="location.href='https://grupodvbr.github.io/criar-reservas-mercatto/'">Criar Reserva</button>
+    <button onclick="location.href='https://grupodvbr.github.io/calendario-de-reservas-Mercatto/'">Visualizar reservas</button>
+  </div>
+</div>
+
   <div class="card">
     <h3>Contagens</h3>
     <button onclick="location.href='https://grupodvbr.github.io/utensilios/'">Contagem de Utensílios café</button>
