--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
   </div>
 
   <div class="card">
+    <h3>Caixa</h3>
+    <button onclick="location.href='https://grupodvbr.github.io/CONTAGEM-DE-COMANDAS-MERCATTO/'">Registro de comandas</button>
+  </div>
+  <div class="card">
     <h3>Pesquisas</h3>
     <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
     <button onclick="location.href='https://grupodvbr.github.io/avaliacao/'">Deixe sua opinião sobre melhorias para o sistema</button>
