--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </header>
 
 <div id="banner">
-  ⚡ Aviso Importante:
+  ⚡ Aviso Importante: Sistema em implantação, qualquer problema encontrado tire print e anexe no menu melhorias para o sistema
 </div>
 
 <div class="cards">
@@ -102,7 +102,7 @@
   <div class="card">
     <h3>Pesquisas</h3>
     <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
-    <button onclick="location.href='https://grupodvbr.github.io/avaliacao/'">Deixe sua opinião sobre melhorias para o sistema</button>
+    <button onclick="location.href='https://grupodvbr.github.io/avaliacao/'">MELHORIAS PARA O SISTEMA</button>
   </div>
 
 </div>
