--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="card">
     <h3>Pesquisas</h3>
     <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
-    <button onclick="location.href='https://grupodvbr.github.io/avaliacao/'">MELHORIAS PARA O SISTEMA</button>
+    <button onclick="location.href='https://grupodvbr.github.io/MENU-MELHORIAS/'">MELHORIAS PARA O SISTEMA</button>
   </div>
 
 </div>
