--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </header>
 
 <div id="banner">
-  ⚡ Aviso Importante: Sistema em implantação, qualquer problema encontrado tire print e anexe no menu melhorias para o sistema
+  ⚡ Aviso Importante: Sistema em implantação, qualquer problema encontrado tire print e anexe no menu AVALIE O SISTEMA.
 </div>
 
 <div class="cards">
@@ -102,7 +102,7 @@
   <div class="card">
     <h3>Pesquisas</h3>
     <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
-    <button onclick="location.href='https://grupodvbr.github.io/MENU-MELHORIAS/'">MELHORIAS PARA O SISTEMA</button>
+    <button onclick="location.href='https://grupodvbr.github.io/MENU-MELHORIAS/'">AVALIE O SISTEMA</button>
   </div>
 
 </div>
