--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
   <div class="card">
     <h3>Contagens</h3>
     <button onclick="location.href='https://grupodvbr.github.io/utensilios/'">Contagem de Utensílios café</button>
-    <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
-    <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
-    <button onclick="location.href='https://exemplo.com/contagem-cozinha'">Contagem Cozinha</button>
   </div>
 
   <div class="card">
@@ -101,7 +98,7 @@
 
   <div class="card">
     <h3>Pesquisas</h3>
-    <button onclick="location.href='https://exemplo.com/pesquisa-ambiente'">Pesquisa Ambiente</button>
+    <button onclick="location.href='SITE EM MANUTENÇÃO'">Pesquisa Ambiente</button>
     <button onclick="location.href='https://grupodvbr.github.io/MENU-MELHORIAS/'">AVALIE O SISTEMA</button>
   </div>
 
