--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
   <div class="card">
     <h3>Gerência</h3>
-    <button onclick="protegerAcesso('https://grupodvbr.github.io/criar-reservas-mercatto/')">Criar Reserva</button>
-    <button onclick="protegerAcesso('https://grupodvbr.github.io/calendario-de-reservas-Mercatto/')">Visualizar reservas</button>
+    <button onclick="protegerAcesso('https://grupodvbr.github.io/criar-reservas-mercatto/')">Reservas</button>
+    <button onclick="protegerAcesso('https://grupodvbr.github.io/clientescadastradosmercatto/')">Clientes cadastrados</button>
   </div>
 
   <div class="card">
