--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </header>
 
 <div id="banner">
-  ⚡ Aviso Importante: Sistema em implantação, qualquer problema encontrado tire print e anexe no menu AVALIE O SISTEMA.
+  ⚡ Aviso Importante: Sistema em implantação, qualquer problema encontrado tire print e informe ao administrador.
 </div>
 
 <div class="cards">
