--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <h3>Gerência</h3>
     <button onclick="protegerAcesso('https://grupodvbr.github.io/criar-reservas-mercatto/')">Reservas</button>
     <button onclick="protegerAcesso('https://grupodvbr.github.io/clientescadastradosmercatto/')">Clientes cadastrados</button>
+    <button onclick="protegerAcesso('https://grupodvbr.github.io/agendamercatto/')">Agenda de músicos</button>
   </div>
 
   <div class="card">
